--- a/frontend/tests/index.html
+++ b/frontend/tests/index.html
@@ -11,8 +11,7 @@
     {{content-for 'test-head'}}
 
     <link rel="stylesheet" href="assets/vendor.css">
-    <!-- <link rel="stylesheet" href="assets/frontend.css"> -->
-    <link rel="stylesheet" href="http://localhost:3000/assets/frontend.css">
+    <link rel="stylesheet" href="assets/frontend.css">
     <link rel="stylesheet" href="assets/test-support.css">
 
     {{content-for 'head-footer'}}
